<resources>
    <string name="app_name">SmartOffice</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--splash screen-->
    <string name="splash_app_name">Smart Office</string>
    <string name="setup_wifi">Setup wifi</string>
    <string name="add">Add</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>

    <!--alertdialog_setupwifi-->
    <string name="required_ssid">field required</string>
    <string name="required_password">password required</string>

    <!--recycler switch-->
    <string name="Switch">Switch</string>
    <string name="switch_type">Switch Type</string>
    <string name="toolbar_name">Toolbar name</string>
    <string name="tab_item">tab item</string>

    <!--recycler device-->
    <string name="pin_6">6 - pin</string>
    <string name="device_name">Device name</string>
    <string name="code">Code</string>
    <string name="mac">Mac</string>
    <string name="or">OR</string>
    <string name="scan_qr_code">Scan QR Code</string>

    <!--add switch-->
    <string name="Switch_name">Switch Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="add_switch">Add Switch</string>
    <string name="enter_room_name">Enter Room Name</string>

    <!--Titles-->
    <string name="add_rooms">Add Rooms</string>
    <string name="new_switch">New Switch</string>
    <string name="devices">Devices</string>
    <string name="add_new_device">Add New Device</string>
    <string name="home">Home</string>
    <string name="people">Share With People</string>
    <string name="settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boss_office">Boss Office</string>
    <string name="developing_area">Developing Area</string>
    <string name="conference_area">Conference Area</string>

    <!--errors-->
    <string name="internet_not_available">Internet not available</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="pass_length_error">Password has to be more than 4 characters</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="invitation">Invitation</string>
    <string name="share_this_switch_with">Share this switch with</string>
    <string name="title_edit_switch">Edit Switch</string>
    <string name="update_switch">Update</string>

    <!--AddNewDevice-->
    <string name="device_created">Device Created</string>
    <string name="unable_to_add_new_device">Unable to add new device</string>
    <string name="device_name_not_valid">Device name not valid</string>
    <string name="code_not_valid">Code not valid</string>
    <string name="mac_not_valid">Mac not valid</string>
    <string name="create_device">Create Device</string>

    <!--update device-->
    <string name="update_device">Update switch</string>


</resources>
