<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">


    <ImageView
        android:id="@+id/iv_alertdialog_add_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/alertdialog_custom_close"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/all_rounded_white"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_alertdialog_add_close">

        <TextView
            android:id="@+id/tv_alertdialog_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/setup_wifi"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/et_alertdialog_ssid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <EditText
            android:id="@+id/et_alertdialog_ssid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/field_all_rounded"
            android:elevation="1dp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/ssid"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/et_alertdialog_add_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alertdialog_add_title" />

        <EditText
            android:id="@+id/et_alertdialog_add_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/field_all_rounded"
            android:ems="10"
            android:elevation="1dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_alertdialog_ssid" />

        <Button
            android:id="@+id/btn_alertdialog_add_add"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_blue_gradient_all_btn"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_alertdialog_add_title"
            app:layout_constraintStart_toStartOf="@id/tv_alertdialog_add_title"
            app:layout_constraintTop_toBottomOf="@id/et_alertdialog_add_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>