<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_updatedevice_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <include
        android:id="@+id/pb"
        layout="@layout/indeterminant_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/fragment_container_top_margin"
        android:background="@color/light_grey"
        android:padding="@dimen/default_content_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <include
            layout="@layout/indeterminant_progress_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_editandshare_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/field_all_rounded"
            android:elevation="@dimen/_1sdp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/device_name"
            android:inputType="text"
            android:padding="@dimen/edittext_padding"
            android:textSize="@dimen/default_medium_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_editandshare_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_top_margin"
            android:background="@drawable/field_all_rounded"
            android:elevation="@dimen/_1sdp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/code"
            android:inputType="text"
            android:padding="@dimen/edittext_padding"
            android:textSize="@dimen/default_medium_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_editandshare_name" />

        <EditText
            android:id="@+id/et_editandshare_mac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_top_margin"
            android:background="@drawable/field_all_rounded"
            android:elevation="@dimen/_1sdp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/mac"
            android:padding="@dimen/edittext_padding"
            android:textSize="@dimen/default_medium_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_editandshare_code" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="@dimen/add_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/custom_blue_gradient_all_btn"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/update_device"
            android:textColor="@color/white"
            android:textSize="@dimen/default_small_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_editandshare_mac" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
